<resources>
    <string name="app_name">My Application</string>
    <string name="welcome">Welcome to MyApp</string>
    <string name="kullaniciAdi">Username</string>
    <string name="kullaniciSifre">Password</string>
    <string name="girisButon">Log In</string>
    <string name="button_signUp">Sign Up</string>
    <string name="hosgeldin">Welcome</string>
    <string name="metin">Metni giriniz</string>

    <string name="menuActivity_sendMail">Send Email</string>
    <string name="menuActivity_sensor">Sensor</string>
    <string name="menuActivity_personInfo">Person Info</string>
    <string name="menuActivity_myInfo">My Info</string>
    <string name="menuActivity_NoteEditor">Notes</string>
    <string name="menuActivity_Progress">Progress</string>
    <string name="menuActivity_Alarm">Alarm</string>
    <string name="menuActivity_Location">Location</string>
    <string name="menuActivity_Logs">Show Logs</string>

    <string name="newUser_name">Name : </string>
    <string name="newUser_surname">Surname : </string>
    <string name="newUser_email">Email : </string>
    <string name="newUser_username">Username : </string>
    <string name="newUser_password">Password : </string>
    <string name="newUser_password2">Confirm Password : </string>

    <string name="email_compose_from">From : </string>
    <string name="email_compose_to">To : </string>
    <string name="email_compose_cc">Cc : </string>
    <string name="email_compose_bcc">Bcc : </string>
    <string name="email_compose_subject">Subject : </string>
    <string name="email_compose_button_attach">Attach</string>
    <string name="email_compose_button_send">Send</string>

    <string name="asyncTask_button_download">Download</string>

    <string name="alarm_button_set">Set Alarm</string>
    <string name="alarm_switch_onOff">Alarm On</string>

    <string name="location_send_Watsapp">Send Location Via Whatsapp</string>
    <string name="location_send_sms">Send Location Via SMS</string>
    <string name="location_get_Location">Get Location</string>
    <string name="location_your_Location">Your Location</string>


    <string name="myInfo_name">Name :</string>
    <string name="myInfo_gender">Gender :</string>
    <string name="myInfo_height">Height :</string>
    <string name="myInfo_weight">Weight :</string>
    <string name="myInfo_age">Age :</string>
    <string name="myInfo_mode">Mode :</string>
    <string name="myInfo_button_save">Save</string>
    <string-array name="myInfo_array_gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="myInfo_array_mode">
        <item>Dark</item>
        <item>Light</item>
    </string-array>

</resources>
