<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".newUser"
    android:gravity="top">

    <TextView
        android:id="@+id/textView_name"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/newUser_name" />

    <EditText
        android:id="@+id/editText_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="" />

    <TextView
        android:id="@+id/textView_surname"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/newUser_surname"/>

    <EditText
        android:id="@+id/editText_surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="" />

    <TextView
        android:id="@+id/textView_email"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/newUser_email" />

    <EditText
        android:id="@+id/editText_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""/>

    <TextView
        android:id="@+id/textView_username"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/newUser_username" />

    <EditText
        android:id="@+id/editText_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="" />

    <TextView
        android:id="@+id/textView_password"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/newUser_password" />

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="" />

    <TextView
        android:id="@+id/textView_password2"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/newUser_password2" />

    <EditText
        android:id="@+id/editText_password2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="" />

    <Button
        android:id="@+id/button_signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_signUp" />
</LinearLayout>