<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editText_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/kullaniciAdi"
        android:gravity="center"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editText_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/kullaniciSifre"
        android:gravity="center"
        android:autofillHints="" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/girisButon" />
    <Button
        android:id="@+id/button_signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_signUp" />
</LinearLayout>