<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MenuActivity">

        <TextView
            android:id="@+id/textView_menu_topic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="30dp"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:padding="30dp" />

        <Button
            android:id="@+id/button_menu_sendMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menuActivity_sendMail"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="@android:color/black"/>

        <Button
            android:id="@+id/button_menu_sensor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menuActivity_sensor"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="@android:color/black"/>

        <Button
            android:id="@+id/button_menu_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menuActivity_NoteEditor"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="@android:color/black"/>

        <Button
            android:id="@+id/button_menu_personInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menuActivity_personInfo"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="@android:color/black"/>

        <Button
            android:id="@+id/button_menu_myInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menuActivity_myInfo"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="@android:color/black"/>

</LinearLayout>