<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".myInfo">


    <TextView
        android:id="@+id/textView_myInfo_name"
        android:layout_width="97dp"
        android:layout_height="53dp"
        android:layout_row="0"
        android:layout_column="0"
        android:text="@string/myInfo_name" />

    <TextView
        android:id="@+id/editText_myInfo_name"
        android:layout_width="320dp"
        android:layout_height="42dp"
        android:layout_row="0"
        android:layout_column="1"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="İbrahim"
        android:textColor="@android:color/black"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/textView_myInfo_height"
        android:layout_width="97dp"
        android:layout_height="53dp"
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/myInfo_height" />

    <EditText
        android:id="@+id/editText_myInfo_height"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="" />

    <TextView
        android:id="@+id/textView_myInfo_weight"
        android:layout_width="97dp"
        android:layout_height="53dp"
        android:layout_row="2"
        android:layout_column="0"
        android:text="@string/myInfo_weight" />

    <EditText
        android:id="@+id/editText_myInfo_weight"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="" />

    <TextView
        android:id="@+id/textView_myInfo_age"
        android:layout_width="97dp"
        android:layout_height="53dp"
        android:layout_row="3"
        android:layout_column="0"
        android:text="@string/myInfo_age" />

    <EditText
        android:id="@+id/editText_myInfo_age"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="1"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="" />

    <TextView
        android:id="@+id/textView_gender"
        android:layout_width="97dp"
        android:layout_height="53dp"
        android:layout_row="4"
        android:layout_column="0"
        android:text="@string/myInfo_gender" />

    <Spinner
        android:id="@+id/spinner_gender"
        android:layout_width="320dp"
        android:layout_height="49dp"
        android:layout_row="4"
        android:layout_column="1"
        android:text="" />

    <TextView
        android:id="@+id/textView_myInfo_mode"
        android:layout_width="97dp"
        android:layout_height="53dp"
        android:layout_row="5"
        android:layout_column="0"
        android:text="@string/myInfo_mode" />

    <Spinner
        android:id="@+id/spinner_mode"
        android:layout_width="320dp"
        android:layout_height="49dp"
        android:layout_row="5"
        android:layout_column="1"
        android:text="TextView" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_column="1"
        android:layout_margin="30dp"
        android:padding="20dp"
        android:text="@string/myInfo_button_save" />

</GridLayout>