<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".emailCompose">

    <TextView
        android:id="@+id/textView_from"
        android:layout_width="105dp"
        android:layout_height="62dp"
        android:layout_row="0"
        android:layout_column="0"
        android:text="@string/email_compose_from" />

    <EditText
        android:id="@+id/editText_from"
        android:layout_width="306dp"
        android:layout_height="62dp"
        android:layout_row="0"
        android:layout_column="1"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="" />

    <TextView
        android:id="@+id/textView_to"
        android:layout_width="103dp"
        android:layout_height="62dp"
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/email_compose_to" />

    <EditText
        android:id="@+id/editText_to"
        android:layout_width="308dp"
        android:layout_height="62dp"
        android:layout_row="1"
        android:layout_column="1"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="" />

    <TextView
        android:id="@+id/textView_subject"
        android:layout_width="107dp"
        android:layout_height="60dp"
        android:layout_row="2"
        android:layout_column="0"
        android:text="@string/email_compose_subject" />

    <EditText
        android:id="@+id/editText_subject"
        android:layout_width="306dp"
        android:layout_height="62dp"
        android:layout_row="2"
        android:layout_column="1"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="" />

    <EditText
        android:id="@+id/editText_mail"
        android:layout_width="306dp"
        android:layout_height="301dp"
        android:layout_row="3"
        android:layout_column="1"
        android:ems="10"
        android:gravity="top|left"
        android:inputType="textMultiLine"
        android:text="Mail" />

    <Button
        android:id="@+id/button_send"
        android:layout_width="308dp"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="1"
        android:text="@string/email_compose_button_send" />
</GridLayout>